Added mandelbrot implementation using Project Panama features